# AssetBuilder

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md
data/: render_blender.py
data/blender/: Animated.blend  Suzanne.blend  SuzanneNoLighting.blend
data/example_blend2sheet/: Animated.json
data/example_font-map/: font_atlas.json
data/example_megasheet/: MegaSheet.json
data/fonts/: input.txt
src/: font_map.rs  main.rs  spritesheet.rs  spritesheet_gen.rs
src/tasks/: blend2sheet.rs  font_map.rs  mega_sheet.rs  mod.rs  resize_images.rs
