[package]
edition = "2021"
name = "asset-builder"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.20", features = ["derive"]}
image = "0.25.2"
rayon = "1.10.0"
rusttype = "0.9.3"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
uuid = {version = "1.11.0", features = ["v4"]}
walkdir = "2.5.0"
